feat: add throttling and security enhancements
- Added @nestjs/throttler package for request rate limiting with a TTL of 60 seconds and a limit of 10 requests per IP.
- Integrated helmet middleware for enhanced security by setting HTTP headers.
- Updated package.json to include new dependencies: @nestjs/throttler, helmet, and npm.

--- a/package.json
+++ b/package.json
@@ -28,10 +28,14 @@
     "@nestjs/graphql": "^12.2.0",
     "@nestjs/mongoose": "^10.0.10",
     "@nestjs/platform-express": "^11.0.20",
+    "@nestjs/throttler": "^6.4.0",
     "bookvault-graphql": "file:",
     "graphql": "^16.9.0",
+    "helmet": "^8.1.0",
+    "install": "^0.13.0",
     "mongoose": "^8.5.1",
     "nest-graphql": "file:",
+    "npm": "^11.3.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
