feat: enhance configuration management with environment-specific settings, validation, and health checks

--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+    "start:prod": "cross-env NODE_ENV=production node dist/main",
+    "start:test": "cross-env NODE_ENV=test nest start",
+    "env:dev": "node -e \"require('fs').copyFileSync('.env.development.example', '.env.development')\"",
+    "env:prod": "node -e \"require('fs').copyFileSync('.env.production.example', '.env.production')\"",
+    "env:test": "node -e \"require('fs').copyFileSync('.env.test.example', '.env.test')\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -55,6 +59,7 @@
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
