--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bookvault-graphql",
   "version": "0.0.1",
   "description": "A NestJS GraphQL application with MongoDB integration",
-  "author": "PrajwalDev056",
+  "author": "PrajwalDev056e",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -26,12 +26,12 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.5",
-    "@nestjs/apollo": "^12.2.0",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/common": "^11.0.20",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.20",
-    "@nestjs/graphql": "^12.2.0",
-    "@nestjs/mongoose": "^10.0.10",
+    "@nestjs/graphql": "^13.1.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^11.0.20",
     "@nestjs/throttler": "^6.4.0",
     "bookvault-graphql": "file:",
@@ -51,27 +51,27 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.6",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/schematics": "^11.0.5",
+    "@nestjs/testing": "^11.0.20",
     "@types/express": "^4.17.13",
-    "@types/jest": "28.1.8",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/jest": "29.5.12",
+    "@types/node": "^20.10.0",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "cross-env": "^7.0.3",
     "eslint": "^9.24.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.3",
-    "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.8",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "jest": "29.7.0",
+    "prettier": "^3.2.5",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.4",
+    "ts-jest": "29.1.2",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "4.2.0",
+    "typescript": "^5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
