Refactor configuration and health check services
- Updated production and test environment configurations to include additional properties such as debug, logging, and security settings.
- Enhanced validation schema to include new environment variables and improved error messages.
- Refactored database health check service to use HealthIndicator for better integration with NestJS Terminus.
- Modified health controller to utilize the new DatabaseHealthIndicator for health checks.
- Updated rentals module, resolver, and service for improved readability and consistency in code style.
- Refactored user module, resolver, and service to enhance code clarity and maintainability.
- Added VSCode settings for consistent formatting and linting.
- Introduced markdownlint configuration for improved markdown file formatting.

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,9 +2,17 @@
   "singleQuote": true,
   "trailingComma": "all",
   "printWidth": 100,
-  "tabWidth": 2,
+  "tabWidth": 4,
   "semi": true,
   "bracketSpacing": true,
   "arrowParens": "avoid",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": "*.md",
+      "options": {
+        "tabWidth": 2
+      }
+    }
+  ]
 }
